--- a/stocks/缠中说禅/文章收集.md
+++ b/stocks/缠中说禅/文章收集.md
@@ -3,3 +3,5 @@
 - 雪球“缠中说禅108课”原文: https://xueqiu.com/4038396927/221294770
 
 - 缠论 108原文梳理分类方便学习: https://zhuanlan.zhihu.com/p/382916484
+
+- 股票分析: https://github.com/xtangxtang/stockanalysis
